...
    android:layout_height="match_parent"
    android:background="#EFEFEF"

    tools:context="com.todolist.crespi.todolist.app.MainActivity">

    <ListView
        android:id="@+id/list_todo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#151515"/>

</android.support.constraint.ConstraintLayout>

